<resources>
    <string name="work_planner">Job Scheduler</string>
    <string name="action_plus">Add</string>
    <string name="menu_picture">Menu picture</string>
    <string name="edit_picture">Edit button</string>
    <string name="delete_picture">Delete button</string>
    <string name="drawer_open">Open menu</string>
    <string name="drawer_close">Close menu</string>
    <string name="addJob">Add job!</string>
    <string name="date">Date:</string>
    <string name="van">From:</string>
    <string name="douplePoint">:</string>
    <string name="tot">Till:</string>
    <string name="line">-</string>
    <string name="noWork">Still no jobs added!</string>
    <string name="addMoreJobs">Add more jobs!</string>
    <string name="testSetting">Test settings</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="planner">Planner</string>
    <string name="history">History</string>
    <string name="info">About</string>
    <string name="info_popup">Simple job scheduler!\nVersion: 1.0.2\nDeveloper: Geert Berkers</string>
    <string name="settings">Settings</string>
    <string name="not_worked_yet">No finished jobs yet!</string>
    <string name="delete_work">Delete job</string>
    <string name="confirmation">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_job">Add job</string>
    <string name="change_job">Edit job!</string>
    <string name="empte_field">Fill in all fields!</string>
    <string name="incorrect_date">Incorrect date!</string>
    <string name="starttime_error">From time is not correct!</string>
    <string name="endtime_error">Till time is not correct!</string>
    <string name="start_after_end">From time can not be after till time!</string>
    <string name="work_added">Job added!</string>
    <string name="date_exists">Job with this date already exists!</string>
    <string name="no_work_added">No jobs added!</string>
    <string name="setting_saved">Settings saved!</string>
    <!--
    <string name="fav_endtime">Favorite end time:</string>
    <string name="fav_starttime">Favorite start time:</string>
    -->
    <string name="fav_endtime">End time:</string>
    <string name="fav_starttime">Start time:</string>
    <string name="day_first_date" translatable="false">dd-MM-yyyy</string>
    <string name="month_first_date" translatable="false">MM-dd-yyyy</string>
    <string name="date_format">Format:</string>
    <string name="time">Time:</string>
    <string name="changes_found">Changes found!</string>
    <string name="save_changes">Save changes?</string>
    <string name="time_setting" translatable="false">HH:mm</string>
    <string name="edit_fav_start">Edit favorite starttime</string>
    <string name="edit_fav_end">Edit favorite endtime</string>

    <string-array name="menu">
        <item>Planner</item>
        <item>History</item>
        <item>Settings</item>
        <item>About</item>
    </string-array>

    <string-array name="weekendDays">
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>


</resources>
