<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <!-- Date -->
        <ImageView
            android:id="@+id/txtDatum"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:contentDescription="@string/date"
            android:src="@drawable/calendar"
            />

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.75">

            <TextView
                android:id="@+id/txtDatumValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-light"
                android:gravity="center_vertical"
                android:text="@string/day_first_date"
                android:textColor="#000000"
                android:textSize="36sp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <!-- From time -->
        <ImageView
            android:id="@+id/vanTijd"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:contentDescription="@string/van"
            android:src="@drawable/ic_schedule_black_36dp"
            />

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.75">

            <TextView
                android:id="@+id/txtStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_vertical"
                android:text="@string/time_setting"
                android:textColor="#000000"
                android:textSize="36sp"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <!-- End time -->
        <ImageView
            android:id="@+id/totTijd"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:contentDescription="@string/tot"
            android:src="@drawable/ic_schedule_black_36dp"
            />

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.75">

            <TextView
                android:id="@+id/txtEndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_vertical"
                android:text="@string/time_setting"
                android:textColor="#000000"
                android:textSize="36sp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/btnAddWork"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="addWork"
            android:text="@string/addJob"/>

        <Button
            android:id="@+id/btnAddExtraWork"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="addWork"
            android:text="@string/addMoreJobs"/>
    </LinearLayout>
</LinearLayout>