<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/firstWorkAdder"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:id="@+id/datumLayout"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/date"
                android:id="@+id/txtDatum"
                android:layout_marginStart="20dp"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:text="11"
                android:gravity="center"
                android:singleLine="true"
                android:id="@+id/dayPicker"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/txtDatum"
                android:digits="0123456789"
                android:inputType="number"
                android:maxLength="2"/>

            <TextView
                android:id="@+id/lineMonth"
                android:text="@string/line"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/dayPicker"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <EditText
                android:text="09"
                android:singleLine="true"
                android:layout_width="50dp"
                android:id="@+id/monthPicker"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/lineMonth"
                android:gravity="center"
                android:digits="0123456789"
                android:inputType="number"
                android:maxLength="2"/>

            <TextView
                android:id="@+id/lineYear"
                android:text="@string/line"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/monthPicker"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <EditText
                android:text="2015"
                android:id="@+id/yearPicker"
                android:layout_marginEnd="20dp"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/lineYear"
                android:singleLine="true"
                android:gravity="center"
                android:digits="0123456789"
                android:inputType="number"
                android:maxLength="4"/>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/vanTijdLayout"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:text="@string/van"
                android:id="@+id/vanTijd"
                android:layout_marginStart="20dp"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_alignParentStart="true" />
            <EditText
                android:text="18"
                android:layout_width="50dp"
                android:id="@+id/startHourPicker"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/vanTijd"
                android:singleLine="true"
                android:gravity="center"
                android:digits="0123456789"
                android:inputType="number"
                android:maxLength="2"/>
            <TextView
                android:text="@string/douplePoint"
                android:id="@+id/vanTijdSeperator"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/startHourPicker"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <EditText
                android:text="00"
                android:layout_width="50dp"
                android:id="@+id/startMinutePicker"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/vanTijdSeperator"
                android:singleLine="true"
                android:gravity="center"
                android:digits="0123456789"
                android:inputType="number"
                android:maxLength="2"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/totTijdLayout"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:text="@string/tot"
                android:id="@+id/totTijd"
                android:layout_width="100dp"
                android:layout_marginStart="20dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <EditText
                android:text="20"
                android:layout_width="50dp"
                android:id="@+id/endHourPicker"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/totTijd"
                android:singleLine="true"
                android:gravity="center"
                android:digits="0123456789"
                android:inputType="number"
                android:maxLength="2"/>
            <TextView
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/douplePoint"
                android:id="@+id/totTijdSeperator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/endHourPicker"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <EditText
                android:text="30"
                android:layout_width="50dp"
                android:layout_marginEnd="20dp"
                android:id="@+id/endMinutePicker"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="false"
                android:singleLine="true"
                android:gravity="center"
                android:layout_toEndOf="@id/totTijdSeperator"
                android:digits="0123456789"
                android:inputType="number"
                android:maxLength="2"/>
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:onClick="addWork"
        android:id="@+id/btnAddWork"
        android:text="@string/addJob"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstWorkAdder"
        android:layout_alignParentStart="true" />

</RelativeLayout>